--- a/rlink.html
+++ b/rlink.html
@@ -1925,7 +1925,7 @@
 <div class="typora-export-content">
     <div id="write" class="">
         <h1 id="tianjinglis-public-key">
-            <span>🚀订阅链接</span>
+            <span>🚀链接</span>
         </h1>
 
         <!-- 内容 -->
