--- a/index.html
+++ b/index.html
@@ -1931,20 +1931,20 @@
             }
         }
     </style>
-    <title>公告栏 - tianjingli.github.io</title>
+    <title>公告栏 - jerryt92.github.io</title>
 </head>
 <body class="typora-export">
 <div class="typora-export-content">
     <div id="write" class="">
-        <h1 id="tianjinglis-public-key">
-            <span>公告栏 - tianjingli.github.io</span>
+        <h1 id="JerryT's-public-key">
+            <span>公告栏 - jerryt92.github.io</span>
         </h1>
         <p>
             <a href="./rlink.html">订阅链接</a>
         </p>
         <hr/>
         <p>
-            <a href="https://tianjingli.github.io"><span>主页</span></a>
+            <a href="https://jerryt92.github.io"><span>主页</span></a>
         </p>
         <p>&nbsp;</p>
     </div>
