--- a/rlink.html
+++ b/rlink.html
@@ -1919,12 +1919,12 @@
             }
         }
     </style>
-    <title>订阅链接 - tianjingli.github.io</title>
+    <title>订阅链接 - jerryt92.github.io</title>
 </head>
 <body class="typora-export">
 <div class="typora-export-content">
     <div id="write" class="">
-        <h1 id="tianjinglis-public-key">
+        <h1 id="jerryt92s-public-key">
             <span>🚀链接</span>
         </h1>
 
